--- a/css/index.css
+++ b/css/index.css
@@ -1,187 +1,258 @@
+*{
+    font-family: 'Poppins', sans-serif;
+}
+
 body{
-    overflow-x:hidden;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+    background-color: #f9fafa;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
 }
 
-#body1{
-    background-color: ghostwhite;
+#nav{
+    display: flex;
+    flex-direction: row;
+    height: 80px;
+    align-items: center;
+    /* background-color: green; */
 }
 
-#nav1 .container{
-    background: skyblue;
-    width: 100vw;
-    position: absolute;
-    z-index: 9999;
+#left_nav{
+    width: 50%;
+    height: auto;
+    font-size: 42px;
+    display: flex;
+    flex-direction: row;
+    padding: 0px 0px 0px 50px;
+    /* justify-content: center; */
+    align-items: center;
 }
 
-.navbar{
-       margin-bottom: 0!important;
+#linkedin_pic{
+    width: 45px;
+    height: 45px;
+    padding: 0px 0px 0px 20px;
 }
 
-#nav1 a, #nav1 a{
+#github_pic{
+    width: 60px;
+    height: 60px;
+    padding: 0px 0px 0px 20px;
+}
+
+#right_nav{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width:50%;
+    height: auto;
+    font-size: 25px;
+    font-weight: 550;
+}
+
+#right_nav a{
+    text-decoration: none;
+    color: black;
+    margin: 0px 30px 0px 0px;
+    color: #3583DE;
+}
+
+#right_nav a:hover{
+    color: rgb(230, 151, 66);
+}
+
+#me_section{
+    display: grid;
+    grid-template-columns: 10fr 9fr;
+    width: 100%;
+    height: 70vh;
+    padding-bottom: 0px;
+}
+
+#me_section_left{
+    display: flex;
+    flex-direction: column;
+    color: black;
+    background-color: #f9fafa;
+    justify-content: center;
+    padding: 0px 20px 0px 80px;
+}
+
+
+#me_section_left_name{
+    display: flex;
+    color: #3583DE;
+    font-size: 40px;
+}
+
+#me_section_left_name2{
+    padding: 20px 0px 20px 0px;
+    font-size: 22px;
+}
+
+#me_section_right{
+    display: flex;
+    color: black;
+    align-items: center;
+}
+
+#parkBenchPic{
+    width: 50%;
+    border: 10px outset #3583DE;
+    border-radius: 180px;
+    box-shadow: 0px 0px 5px grey;
+    margin-left: 50px;
+}
+
+#what_ive_been_up_to{
+    /* background-color: orange; */
+    height: auto;
+    display: flex;
+    align-items: center;
+    color:#3583DE;
+    font-size: 40px;
+    font-weight: 500;
+    display: flex;
+    flex-direction: column;
+    margin: 30px 0px 0px 0px;
+    padding: 40px 0px 100px 0px;
+}
+
+#project_pic_div{
+    width: 40%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    /* background-color: red; */
+}
+
+#project_pic{
+    width: 50%;
+    border: 10px outset #3583DE;
+    border-radius: 80px;
+    box-shadow: 0px 0px 5px grey;
+    margin-left: 50px;
+    background-color: black;
+}
+
+#what_ive_been_up_to_title{
+    font-size: 50px;
+    color: rgb(230, 151, 66);
+}
+
+.project{
+    margin: 60px 0px 0px 0px;
+    display: flex;
+    flex-direction: row;
+    /* background-color: green; */
+}
+
+.project_title{
+    color:#3583DE;
+    /* color:rgb(230, 151, 66); */
+
+    padding: 0px 0px 20px 0px;
+}
+
+.project_title_and_desc{
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    height: 80%;
+    justify-self: center;
+    font-size: 30px;
     color: black;
 }
 
-#nav1 ul :hover, #nav1 a:hover{
-    color:floralwhite;
+/* Tablet */
+@media screen and (max-width: 1000px) {
+    body {
+        /* background-color: orange; */
+    }
+    
+    #left_nav{
+        width: 50%;
+        height: auto;
+        font-size: 30px;
+        display: flex;
+        flex-direction: row;
+        padding: 0px 0px 0px 50px;
+        align-items: center;
+    }
+
+    #linkedin_pic{
+        width: 35px;
+        height: 35px;
+        padding: 0px 0px 0px 20px;
+    }
+
+    #github_pic{
+        width: 50px;
+        height: 50px;
+        padding: 0px 0px 0px 20px;
+    }
+
+    #right_nav{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        width: 50%;
+        height: auto;
+        font-size: 0px;
+        font-weight: 550;
+    }
+    #right_nav a{
+        text-decoration: none;
+        color: black;
+        margin: 0px 0px 0px 0px;
+        color: #3583DE;
+    }
+    #me_section{
+        display: flex;
+        flex-direction: column-reverse;
+        height: auto;
+        padding: 30px 0px 0px 0px;
+    }
+    #me_section_right{
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+        padding: 0px 0px 40px 0px;
+    }
+    #what_ive_been_up_to_title{
+        font-size: 35px;
+    }
+    .project_title{
+        font-size: 30px;
+    }
+    .project_title_and_desc{
+        font-size: 20px;
+        width: 80%;
+        padding: 20px 0px 0px 0px;
+    }
+    .project{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .project_title{
+        padding: 0px;
+    }
+    #project_pic{
+        width: 100%;
+    }
+    .project_description{
+        padding: 20px 0px 0px 0px;
+    }
+
 }
 
-#nav1 #navbar a{
-    font-family: 'Rubik', sans-serif;
-}
-
-#nav1 .Brand a{
-    font-family:'Rubik', sans-serif;
-}
-
-#txt {
-    font-family: 'Anton', sans-serif;
-    margin-top:15;
-    display: inline-block;
-    text-align: center;
-    vertical-align: top;
-}
-
-#navbar-options{
-    display: inline-block;
-}
-
-#name {
-    margin-top: 50px;
-    text-align: center;
-}
-
-#firstSection{
-    background-color: EDF9FE;
-}
-
-.firstSection-right h1{
-    margin-top:20px;
-    font-family: 'Anton', sans-serif;
-}
-
-.firstSection-right p{
-    font-family:'Rubik', sans-serif;
-}
-
-#parkPic{
-  border-radius: 50%;
-  width:100%;
-  margin-top: 20;
-  margin-bottom: 20;
-  border: 10px outset skyblue;
-  border-radius: 500px;
-  box-shadow: 0px 0px 5px grey;
-
-}
-
-/*#readmore1{
-    margin-left: 10px;
-}*/
-
-#seal{
-    border: 10px outset skyblue;
-    border-radius: 500px;
-    box-shadow: 0px 0px 5px grey;
-}
-
-.secondSection-right #h2{
-    margin-top: 10;
-}
-
-.secondSection-right #h3{
-    font-family:'Rubik', sans-serif;
-}
-
-.secondSection-right .list{
-    margin-bottom: 20;
-}
-
-#secondSection{
-    margin-bottom: -5;
-    background-color: EDF9FE;
-    opacity: inherit;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-}
-
-#secondSection img{
-  border-radius: 25px;
-  width:100%;
-  margin-top: 3vh;
-  margin-bottom: 3vh;
-}
-
-#secondSection h2 {
-    margin-top: 0;
-    margin-bottom: 10;
-    font-family: 'Roboto Slab', sans-serif;
-    font-size: 30;
-    text-align: center;
-    font-style: italic;
-}
-
-#secondSection p {
-    margin-bottom: 0;
-    font-family: 'Rubik', sans-serif;
-    font-size: 20;
-    text-align: center;
-}
-
-#readmore2{
-    margin-left: 220;
-    margin-top: 30;
-}
-
-
-#thirdSection{
-    background-color: EDF9FE;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-    align-content: center;
-    text-align: center;
-}
-
-#thirdSectionTitle{
-    font-family: 'Rubik', sans-serif;
-    font-size: 40;
-}
-
-#thirdSection video{
-    height: 600;
-    margin-top: 20;
-    margin-bottom: 20;
-    border: 10px outset skyblue;
-    border-radius: 500px;
-    box-shadow: 0px 0px 5px grey;
-}
-
-#videosRow{
-    display: inline-block;
-}
-
-#footerSection {
-    height: 25vh;
-    text-align: center;
-    background-color: skyblue;
-}
-
-#footerSection{
-    background-color: skyblue;
-}
-
-#footerSection h2{
-    font-size: 30;
-    color:aliceblue;
-    font-family: 'Roboto Slav', sans-serif;
-}
-
-#footerSection p{
-    font-size: 15;
-    color:aliceblue;
-    font-family: 'Roboto Slav', sans-serif;
-}
-
-#facebook,#instagram,#twitter {
-    font-size: 50;
-    color:aliceblue;
+/* Mobile */
+@media screen and (max-width: 480px) {
+    body {
+        /* background-color: lightgreen; */
+    }
 }
