--- a/css/index.css
+++ b/css/index.css
@@ -134,7 +134,7 @@ body{
     border: 10px outset #3583DE;
     border-radius: 80px;
     box-shadow: 0px 0px 5px grey;
-    margin-left: 50px;
+    margin-left: 0px;
     background-color: black;
 }
 
@@ -165,6 +165,7 @@ body{
     justify-self: center;
     font-size: 30px;
     color: black;
+    padding-right: 80px;
 }
 
 /* Tablet */
