--- a/des157/styles.css
+++ b/des157/styles.css
@@ -1,24 +1,54 @@
 body{
-    width: 1366px;
-    min-width: 900px;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: aliceblue;
+    font-family: 'Montserrat', sans-serif;
+}
+
+#main_container{
+    max-width: 1366px;
+    min-width: 900px;
+    /* background-color: white; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+header{
+    /* background-color: blueviolet; */
+    align-items: center;
+    display: flex;
+    flex-direction: column;
 }
 
 #banner{
+    /* background-color: yellow; */
     width: 1100px;
     height: 250px;
 }
 
 main{
+    /* background-color: brown; */
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+}
+
+main div{
+    /* background-color: chocolate; */
+    border-radius: 20px;
+    border: 3px solid black;
+    padding: 5px;
 }
 
 main ul{
+    /* background-color: cornflowerblue; */
     list-style-type: none;
+    margin: 0;
+    padding: 0;
+    border-radius: 20px;
 }
 
 #square1{
@@ -35,7 +65,6 @@ main ul{
     50% {left: 200px;}
     100%{left: 0px;}
 }
-
 
 #square2{
     background-color: blue;
@@ -57,4 +86,9 @@ main ul{
 
 #banner div{
     border-radius: 50px;
+}
+
+footer{
+    display: flex;
+    flex-direction: column;
 }
