--- a/des157/styles.css
+++ b/des157/styles.css
@@ -38,10 +38,17 @@ main{
 }
 
 main div{
-    /* background-color: chocolate; */
+    background-color: rgb(104, 176, 180);
     border-radius: 20px;
     border: 3px solid black;
-    padding: 5px;
+    padding: 0px 15px 10px 15px;
+    box-shadow: 3px 5px 3px grey;
+    color:
+}
+
+main div h2{
+    margin: 15px 0px 15px 0px;
+    font-weight: 500;
 }
 
 main ul{
@@ -50,6 +57,17 @@ main ul{
     margin: 0;
     padding: 0;
     border-radius: 20px;
+    text-decoration: none;
+}
+
+main li{
+    padding: 0px 0px 5px 0px;
+    font-weight: 400;
+}
+
+main a{
+    text-decoration: none;
+    color: black
 }
 
 #square1{
@@ -57,8 +75,10 @@ main ul{
     width: 20px;
     height: 100px;
     position: relative;
-    animation: upanddown 1s;
+    animation: upanddown 2.4s;
     animation-iteration-count: infinite;
+    border: 2px solid black;
+    box-shadow: 5px 5px 2px grey;
 }
 
 @keyframes upanddown{
@@ -83,7 +103,7 @@ main ul{
     0% {left: 0px; top: 50px}
     /* 25% {left: 336px; top: 50px} */
     /* 50% {left: 672; top: 100px;} */
-    50% {left: 1020px; top: 70px;}
+    50% {left: 1011px; top: 20px;}
     100% {left: 0px; top: 50px;}
 
     /* 100%{left: 0px;} */
@@ -95,8 +115,10 @@ main ul{
     width: 40px;
     height: 40px;
     position: relative;
-    animation: dance 2s;
+    animation: dance 2.4s;
     animation-iteration-count: infinite;
+    border: 1px solid black;
+    box-shadow: 5px 5px 2px grey;
 }
 
 #square3{
@@ -105,12 +127,10 @@ main ul{
     width: 20px;
     height: 100px;
     position: relative;
-    animation: upanddowntwo 1s;
+    animation: upanddowntwo 2.4s;
     animation-iteration-count: infinite;
-}
-
-#square2:hover{
-    width: 500px;
+    border: 2px solid black;
+    box-shadow: 5px 5px 2px grey;
 }
 
 #banner div{
@@ -120,4 +140,7 @@ main ul{
 footer{
     display: flex;
     flex-direction: column;
+    margin: 50px 0px 0px 0px;
+    font-weight: 700;
+    color: black
 }
