--- a/des157/studio3/index.css
+++ b/des157/studio3/index.css
@@ -5,33 +5,33 @@ body{
     align-items: center;
 }
 
-#container{
+#container_index{
     width: 1366px;
 }
 
-#title{
+#title_index{
     width: 100%;
     height: 200px;
     display: flex;
     justify-content: center;
 }
 
-#title img{
+#title_index img{
     max-height: 100%;
 }
 
-#lower_half{
+#lower_half_index{
     display: flex;
     flex-direction: row;
     width: 100%;
 }
 
-#game_rules{
+#game_rules_index{
     width: 50%;
     font-size: 30px;
 }
 
-#menu{
+#menu_index{
     width: 50%;
     /* background-color: yellow; */
     display: flex;
@@ -39,7 +39,7 @@ body{
     align-items: center;
 }
 
-#menu_box{
+#menu_box_index{
     width: 90%;
     /* height: 50%; */
     background-color: white;
@@ -49,13 +49,13 @@ body{
     border-radius: 12px;
 }
 
-#menu_box p{
+#menu_box_index p{
     padding-left: 20px;
     padding-top: 20px;
     font-size: 30px;
 }
 
-#menu button{
+#menu_index button{
     width: 20%;
     background-color: white;
     border-radius: 20px;
@@ -65,7 +65,7 @@ body{
     margin-top: 20px;
 }
 
-#menu_box input{
+#menu_box_index input{
     width: 40%;
     margin-left: 20px;
     font-size: 20px;
