--- a/css/index.css
+++ b/css/index.css
@@ -22,21 +22,17 @@ body{
 }
 
 #RLJ_Logo{
-    /* background-color: red; */
     padding-right: 20px;
     border-right: 4px rgb(230, 151, 66) solid;
-    animation-name: example;
-    animation-duration: 1s;
     position: relative;
+    transition: all 0.5s ease ;
+    left: 0;
 
 }
 
-@keyframes example {
-    0%   {left:0px;}
-    /* 25%  {left:10px;} */
-    50%  {left:10px;}
-    /* 75%  {left:10px;} */
-    100% {left:0px;}
+#RLJ_Logo:hover{
+    transition: all 0.5s ease ;
+    left: 10px;
 }
 
 #left_nav{
@@ -55,13 +51,30 @@ body{
     height: 45px;
     margin: 0px 0px 0px 20px;
     /* background-color: red; */
+    transition: all 0.5s ease-in-out;
+    top: 0px;
+}
+
+#linkedin_pic:hover{
+    transition: all 0.5s ease-in-out;
+    width: 65px;
+    height: 65px;
 }
 
 #github_pic{
     width: 60px;
     height: 60px;
     margin: 0px 0px 0px 20px;
-    /* background-color: aqua; */
+    position: relative;
+    top: 0px;
+    transition: all 0.5s ease-in-out;
+
+}
+
+#github_pic:hover{
+    transition: all 0.5s ease-in-out;
+    width: 90px;
+    height: 90px;
 }
 
 #right_nav{
@@ -125,7 +138,7 @@ body{
     height: auto;
     border: 10px outset #3583DE;
     border-radius: 180px;
-    box-shadow: 0px 0px 5px grey;
+    box-shadow: -3px 3px 10px grey;
     margin-left: 50px;
     overflow: hidden;
 }
@@ -151,15 +164,23 @@ body{
     display: flex;
     /* background-color: red; */
 }
-
-#project_pic{
+#project_pic1,
+#project_pic2,
+#project_pic3,
+#project_pic4{
     width: 50%;
     border: 10px outset #3583DE;
     border-radius: 80px;
     box-shadow: 0px 0px 5px grey;
+    box-shadow: -3px 3px 5px grey;
     margin-left: 0px;
     background-color: black;
 }
+
+#project_pic3{
+    background-color: rgb(185, 214, 223);
+}
+
 
 #what_ive_been_up_to_title{
     font-size: 50px;
@@ -167,15 +188,21 @@ body{
 }
 
 .tech_stack{
-    color: rgb(230, 151, 66);
+    color: rgb(50, 57, 60);
     padding: 40px 0px 0px 0px;
+    columns: 2;
+    font-style: italic;
+    font-weight: 100;
 }
 
 .project{
     margin: 60px 0px 0px 0px;
     display: flex;
     flex-direction: row;
-    /* background-color: green; */
+}
+
+.project::after{
+    border-bottom: 2px solid black;
 }
 
 .project_title{
@@ -195,6 +222,74 @@ body{
     color: black;
     padding-right: 80px;
 }
+
+
+
+
+
+.button_section{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin: 50px 0px 0px 0px;
+}
+
+.button-wrapper{
+    width: 200px;
+    height: 100%;
+    position: relative;
+    display: flex;
+    overflow: hidden;
+}
+
+.button-project-link{
+    width: 100%;
+    font-size: 20px;
+    border-radius: 5px;
+    border: 3px solid black;
+    background-color: transparent;
+    color: #3583DE;
+}
+
+.button-project-link:before{
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: #3583DE;
+    position: absolute;
+    top: 0;
+    left: 0%;
+    border-radius: 5px;
+    z-index: -5;
+}
+
+.button-project-link:before{
+    left: -100%;
+    top: 0%;
+    opacity: 0;
+    transition: all 0.5s ease;
+}
+
+.button-project-link:hover:before{
+    left: 0;
+    opacity: 1;
+    transition: all 0.5s ease;
+}
+
+.button-project-link:hover{
+    color: white;
+    transition: all 0.5s ease-in-out;
+    cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
 
 /* Tablet */
 @media screen and (max-width: 1000px) {
